fixed small layout problem

--- a/saltgui/static/stylesheets/job.css
+++ b/saltgui/static/stylesheets/job.css
@@ -5,6 +5,7 @@
 #page_job .time {
   font-size: 15px;
   font-weight: normal;
+  margin-bottom: 10px;
 }
 
 #page_job .job_menu {
